...
    let columns: [GridItem] = [GridItem(.adaptive(minimum: 160), spacing: 15)]
    
    var body: some View {
        NavigationView {
            VStack(spacing: 0) {
                HStack {
                    SearchBar(text: $searchText, placeholder: "Search for dessert recipes")
                    
                    Spacer()
                    
                    Image(viewModel.sortOption == .alphabetical ? "icons8-alphabetical-sorting-2-72(@3×)" : "icons8-sort-72(@3×)")
                        .resizable()
                        .frame(width: 24, height: 24)
...
                HStack {
                    Spacer()
                    
                    Text("\(viewModel.filteredRecipes(searchText: searchText).count) \(viewModel.filteredRecipes(searchText: searchText).count != 1 ? "recipes" : "recipe") found")
                        .font(.system(.caption2, design: .monospaced))
                        .padding(10)
                        .accessibilityIdentifier("recipes found")
                }
                
                ScrollView {
                    LazyVGrid(columns: columns, spacing: 20) {
                        ForEach(viewModel.filteredRecipes(searchText: searchText), id: \.idMeal) { recipe in
                            NavigationLink(destination: RecipeDetailView(recipeID: recipe.idMeal)) {
...
